fix: letter spacing, diagram centered

--- a/components/LandingPageContent/LandingPageContent.module.css
+++ b/components/LandingPageContent/LandingPageContent.module.css
@@ -65,6 +65,7 @@
 
 .table th {
   font-size: var(--font-huge);
+  letter-spacing: 0.1em;
 }
 
 .table td {
